--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,6 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-
-img {
-    height: 200px;
-    width: 200px;
-}
-
 h1,
 h2 {
     margin: 0;
@@ -26,6 +20,10 @@ button {
 a {
     text-decoration: none;
     color: #ffffff;
+}
+
+p {
+    margin: 0;
 }
 
 /* Gray section */
@@ -89,12 +87,19 @@ a {
 
 /* Picture Section */
 
+.pic img {
+    height: 225px;
+    width: 225px;
+    border-radius: 10px;
+    border: 5px solid #7670c9;
+}
+
 .pic-section {
     display: flex;
     justify-content: center;
-    gap: 80px;
+    gap: 100px;
     font-size: 25px;
-    padding: 20px;
+    padding: 50px 0 100px 0;
 }
 
 .picture-section-header {
@@ -103,13 +108,42 @@ a {
     justify-content: center;
     align-items: center;
     font-size: 48px;
-    padding: 35px 0px 0px;
+    padding: 45px 0px 23px;
 }
 
 .pic {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 225px;
     text-align: center;
+    align-items: center;
 }
 
+
+/* Quote Section */
+
+.quote-section {
+    display: flex;
+    background-color: #E5E7EB;
+    padding: 150px;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-section-text {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    gap: 60px;
+}
+
+.quote {
+    font-weight: 100;
+    font-size: 36px;
+}
+
+.quotee {
+    align-self: flex-end;
+    font-size: 28px;
+    font-weight: bold;
+}
