--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,16 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     margin: 0;
 }
 
 button {
-    background-color: #7670c9;
     border-radius: 10px;
     font-size: 25px;
     font-family: 'Source Sans Pro', sans-serif;
-    padding: 6px 18px;
-    border-style: none;
+    font-weight: 600;
 }
 
 a {
@@ -82,8 +81,15 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    gap: 15px;
 }
 
+.top-section-text button {
+    margin-top: 20px;
+    padding: 6px 18px;
+    background-color: #7670c9;
+    border-style: none;
+}
 
 /* Picture Section */
 
@@ -91,7 +97,8 @@ p {
     height: 225px;
     width: 225px;
     border-radius: 10px;
-    border: 5px solid #7670c9;
+    border: 5px solid #5e5c82;
+    object-fit: cover;
 }
 
 .pic-section {
@@ -117,6 +124,7 @@ p {
     width: 225px;
     text-align: center;
     align-items: center;
+    gap: 15px;
 }
 
 
@@ -125,7 +133,8 @@ p {
 .quote-section {
     display: flex;
     background-color: #E5E7EB;
-    padding: 150px;
+    padding-top: 150px;
+    padding-bottom: 100px;
     justify-content: center;
     align-items: center;
 }
@@ -146,4 +155,56 @@ p {
     align-self: flex-end;
     font-size: 28px;
     font-weight: bold;
+}
+
+/* Click The Button Section */
+
+.signup-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+}
+
+.colored-part {
+    background-color: #3882F6;
+    width: 48%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 35px;
+    padding: 50px;
+}
+
+.colored-part button {
+    height: fit-content;
+    padding: 12px 20px;
+    color: #ffffffef;
+    background-color: #3882F6;
+    border: solid 2px white;
+    margin-left: 5%;
+}
+
+.colored-part-text p {
+    color: #E5E7EB;
+    font-size: 24px;
+}
+
+.colored-part-text h3 {
+    color: #ffffff;
+    padding-bottom: 15px;
+}
+
+
+/* Footer */
+
+.footer {
+    background-color: #1F2937;
+    padding: 1%;
+    color: #E5E7EB;
+    font-size: 18px;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
 }
